[gd_scene load_steps=5 format=2]

[ext_resource path="res://Space Shooter Redux/PNG/Enemies/enemyBlack1.png" type="Texture" id=1]
[ext_resource path="res://Hostiles/Enemies/Enemy_Base.gd" type="Script" id=2]
[ext_resource path="res://Explosion.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43.9414, 37.8123 )

[node name="Enemy_Base" type="Node2D"]
script = ExtResource( 2 )
explosionType = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="ExplosionTimer" type="Timer" parent="."]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
